# rust_wasm_geospatial-ai

./: .gitignore  README.md
backend/: app.py
backend/scripts/: config.py  data_loader.py  geobert.py  wasm_integration.py
rust_wasm/: Cargo.toml
rust_wasm/src/: lib.rs  main.rs  normalization.rs
